--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,14 +32,15 @@ header nav ul li {
 .about h2,
 .work h2,
 .contact h2 {
-    width: 250px;
+    min-width: 250px;
     text-align: right;
     padding-right: 10px;
 }
 
-.about p,
-.work p,
-.contact p {
+/* Adds border to left of content. */
+.about div,
+.contact div {
+    display: block;
     width: initial;
     padding-left: 10px;
     border-left: solid;
@@ -50,3 +51,35 @@ header nav ul li {
 .work img {
     border: solid;
 }
+
+/* Wraps application images when change screen width. */
+.application {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-left: solid;
+    padding-left: 10px;
+}
+
+.refractor,
+.app2,
+.app3,
+.app4,
+.app5 {
+    position: relative;
+    font-family: Arial;
+  }
+  
+#refractor,
+#app2,
+#app3,
+#app4,
+#app5 {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    background-color: black;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
