--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,84 +1,95 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: Geneva, Arial, "Times New Roman";
 }
 
 header {
-    display: flex;
-    margin-bottom: solid;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-image: linear-gradient(#003360 61%, white);
 }
 
-header h1 {
-    display: inline-block;
-    font-size: 48px;
-    margin-bottom: 60px;
+.name {
+  display: inline-flex;
+}
+
+h1 {
+  font-family: Candara, Optima, Calibri;
+  font-size: 56px;
+  color: #b9c6ae;
+  margin-left: 0px;
+  margin-top: 0px;
 }
 
 .navigation {
-    width: inherit;
-    float: right;
-    margin-top: 55px;
+  margin-bottom: -171px;
 }
 
-/* .navigation nav {
-    float: right;
-} */
-
 nav ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 nav ul li {
-    display: inline-block;
-    margin: 10px;
-    font-size: 28px;
+  display: inline-block;
+  margin: 10px;
+  font-size: 28px;
+}
+
+a {
+  font-family: Candara, Optima, Calibri;
+  color: black;
 }
 
 #profile {
-    border-radius: 360px;
-    border: #b9c6ae;
-    z-index: 1;
+  border-radius: 360px;
+  border: #b9c6ae;
+  padding: 3px;
 }
 
 /* Places sections with headers on left and content on right */
 .about,
 .work,
 .contact {
-    display: inline-flex;
+  display: inline-flex;
 }
 
 .about h2,
 .work h2,
 .contact h2 {
-    min-width: 250px;
-    text-align: right;
-    padding-right: 10px;
+  min-width: 250px;
+  text-align: right;
+  padding-right: 10px;
+}
+
+h2 {
+  font-family: Candara, Optima, Calibri;
 }
 
 /* Adds border to left of content. */
 .about div,
 .contact div {
-    display: block;
-    width: initial;
-    padding-left: 10px;
-    border-left: solid;
-    text-align: left;
-    font-size: 14px;
+  display: block;
+  width: initial;
+  padding-left: 10px;
+  border-left: solid;
+  text-align: left;
+  font-size: 14px;
 }
 
 .work img {
-    border: solid;
+  border: solid;
 }
 
 /* Wraps application images when change screen width. */
 .application {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border-left: solid;
-    padding-left: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  border-left: solid;
+  padding-left: 10px;
 }
 
 .refractor,
@@ -86,20 +97,50 @@ nav ul li {
 .app3,
 .app4,
 .app5 {
-    position: relative;
-    font-family: Arial;
-  }
-  
+  position: relative;
+  font-family: Candara, Optima, Calibri;
+}
+
 #refractor,
 #app2,
 #app3,
 #app4,
 #app5 {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    background-color: black;
-    color: white;
-    padding-left: 20px;
-    padding-right: 20px;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  background-color: #003360;
+  color: #b9c6ae;
+  padding: 15px;
+}
+
+h3 {
+  font-family: Candara, Optima, Calibri;
+}
+
+@media screen and (max-width: 1114px) {
+  h1 {
+    font-size: 44px;
   }
+  nav ul li {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 947px) {
+  h1 {
+    font-size: 38px;
+  }
+  nav ul li {
+    font-size: 19px;
+  }
+}
+
+@media screen and (max-width: 869px) {
+  h1 {
+    font-size: 30px;
+  }
+  nav ul li {
+    font-size: 14px;
+  }
+}
