--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,11 @@ h2 {
   border: solid;
 }
 
+/* .work .refractor img {
+    width: 100%;
+    height: auto;
+} */
+
 /* Wraps application images when change screen width. */
 .application {
   display: flex;
@@ -90,6 +95,11 @@ h2 {
   flex-wrap: wrap;
   border-left: solid;
   padding-left: 10px;
+}
+
+.application img {
+    width: 100%;
+    height: 100%;
 }
 
 .refractor,
