--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,8 +86,20 @@ h2 {
   font-size: 14px;
 }
 
+#subProj {
+  display: flex;
+  flex-direction: row;
+}
+
+/* #subProj img {
+
+} */
+
 .work img {
   border: solid;
+  border-color: black;
+  border-radius: 30px;
+  box-shadow: 9px 6px 8px 0px darkgrey;
 }
 
 /* Wraps application images when change screen width. */
@@ -98,12 +110,18 @@ h2 {
   padding-left: 10px;
 }
 
-.application img {
-    width: 100%;
-    height: 100%;
+.app1 img {
+  width: 95%;
 }
 
-.refractor,
+.app2 img,
+.app3 img,
+.app4 img,
+.app5 img {
+  width: 90%;
+}
+
+.app1,
 .app2,
 .app3,
 .app4,
@@ -112,7 +130,7 @@ h2 {
   font-family: Candara, Optima, Calibri;
 }
 
-#refractor,
+#app1,
 #app2,
 #app3,
 #app4,
@@ -123,6 +141,13 @@ h2 {
   background-color: #003360;
   color: #b9c6ae;
   padding: 15px;
+  border: solid;
+  border-radius: 10px;
+  border-color: black;
+}
+
+a {
+  color: #b9c6ae;
 }
 
 h3 {
@@ -134,17 +159,17 @@ h3 {
 }
 
 .info {
-    display: flex;
-    justify-content: space-evenly;
-    align-content: flex-start;
-    width: 100%
+  display: flex;
+  justify-content: space-evenly;
+  align-content: flex-start;
+  width: 100%
 }
 
 .info p,
 .info a {
   font-family: Candara, Optima, Calibri;
   color: black;
-  font-size: 20px
+  font-size: 24px
 }
 
 /* Adjust font size in header for smaller screen sizes. */
@@ -173,4 +198,9 @@ h3 {
   nav ul li a {
     font-size: 14px;
   }
+  #subProj {
+    display: flex;
+    flex-direction: column;
+  }
+  
 }
